Run with Makefile and env vars from values

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-HELP.md
 target/
 .mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
@@ -21,3 +20,5 @@ target/
 
 ### VS Code ###
 .vscode/
+
+.env.local
